Fix footnote separetor alignement

--- a/share/moltaqa-lib/styles/black/default.css
+++ b/share/moltaqa-lib/styles/black/default.css
@@ -483,7 +483,7 @@ sheer {
 
 hr.fns {
     width: 20%;
-    float: left;
+    float: right;
 }
 dl {
     margin-bottom: 18px;
